@@ -1,3 +1,4 @@
+README.md
 TODO
 \.Rhistory
 \.Rprofile
