@@ -27,6 +27,9 @@ mcox <- mstate::msfit(bcox, trans=tmat)
 bwei <- flexsurvreg(Surv(years, status) ~ trans + shape(trans), data=bosms3, dist="weibull")
 mwei <- msfit.flexsurvreg(bwei, t=tgrid, trans=tmat, tvar="trans")
 
+
+
+
 bgg <- flexsurvreg(Surv(years, status) ~ trans + sigma(trans) + Q(trans), data=bosms3, dist="gengamma")
 mgg <- msfit.flexsurvreg(bgg, t=tgrid, trans=tmat, tvar="trans")
 
@@ -74,3 +77,20 @@ test_that("Errors in msfit.flexsurvreg",{
     expect_error(mexp2 <- msfit.flexsurvreg(bexp2, t=seq(0,150,10), trans=tmat), "Values of covariates .+ not supplied")
     expect_error(mexp2 <- msfit.flexsurvreg(bexp2, t=seq(0,150,10), trans=tmat, tvar="foo"), "variable .* not in model")
 })
+
+
+
+tgrid <- seq(0,14,by=0.1)
+mfwei <- msfit.flexsurvreg(bwei, t=tgrid, trans=tmat, tvar="trans")
+ptw <- probtrans(mfwei, predt=0, direction="forward")[[1]]
+ptw[ptw$time %in% c(5,10),]
+
+tgrid <- seq(0,14,by=0.01)
+mfwei <- msfit.flexsurvreg(bwei, t=tgrid, trans=tmat, tvar="trans")
+ptw <- probtrans(mfwei, predt=0, direction="forward")[[1]]
+ptw[ptw$time %in% c(5,10),]
+
+tgrid <- seq(0,14,by=0.001)
+mfwei <- msfit.flexsurvreg(bwei, t=tgrid, trans=tmat, tvar="trans")
+ptw <- probtrans(mfwei, predt=0, direction="forward")[[1]]
+ptw[ptw$time %in% c(5,10),]
